# ai-advisory

./: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  PUBLISHED.md  QUICKSTART.md  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Formula/: ai-advisory.rb
ai_advisory/: cli.py  config.py  display.py  models.py  prompts.py
