[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-advisory"
version = "0.1.0"
description = "Query multiple LLMs and run consensus evaluation"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
ai-advisory = "ai_advisory.cli:app"
